bin/testsuite/tests/compiler/src/errors/compiler3793.swg
#global testerror "Err0728"
#[Swag.Foreign("a.lib", "")]
func toto();
